--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.2",
+    "@angular/cdk": "^12.2.13",
     "@angular/common": "~12.0.2",
     "@angular/compiler": "~12.0.2",
     "@angular/core": "~12.0.2",
     "@angular/forms": "~12.0.2",
+    "@angular/material": "^12.2.13",
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
     "bootswatch": "^5.1.3",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.4.7",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
