--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@sweetalert2/ngx-sweetalert2": "^11.0.0",
     "bootswatch": "^5.1.3",
+    "moment": "^2.29.3",
     "rxjs": "~6.6.0",
-    "sweetalert2": "^11.4.7",
+    "sweetalert2": "^11.4.12",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
