--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sweetalert2/ngx-sweetalert2": "^11.0.0",
     "bootswatch": "^5.1.3",
     "moment": "^2.29.3",
+    "ng-circle-progress": "^1.6.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.4.12",
     "tslib": "^2.1.0",
