--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@ngneat/error-tailor": "^1.4.3",
+    "@popperjs/core": "^2.11.5",
     "@sweetalert2/ngx-sweetalert2": "^11.0.0",
+    "bootstrap": "^5.1.3",
     "bootswatch": "^5.1.3",
     "moment": "^2.29.3",
     "ng-circle-progress": "^1.6.0",
